// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`engage > core > hocs > withRoute should inject a single property with the context into the component 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"route":{"id":"32d55","pathname":"/","pattern":"/","state":{}},"someProp":true}
</pre>
`;

exports[`engage > core > hocs > withRoute should inject the context properties into the component 1`] = `
<pre
  data-testid="wrapped-props"
>
  {"id":"32d55","pathname":"/","pattern":"/","state":{},"someProp":true}
</pre>
`;
